@@ -95,6 +95,7 @@ Class restartAction()
 {
 	if( (self = [super init]) ) {
 
+		[[CCTextureCache sharedTextureCache] dumpCachedTextureInfo];
 		CGSize s = [[CCDirector sharedDirector] winSize];	
 		CCLabelTTF *label = [CCLabelTTF labelWithString:[self title] fontName:@"Arial" fontSize:26];
 		[self addChild:label z:1 tag:kTagLabel];
@@ -117,7 +118,8 @@ Class restartAction()
 		item2.position = ccp( s.width/2, 30);
 		item3.position = ccp( s.width/2 + 100,30);
 		[self addChild: menu z:1];	
-		
+		[[CCTextureCache sharedTextureCache] dumpCachedTextureInfo];
+
 	}
 	return self;
 }
@@ -126,6 +128,7 @@ Class restartAction()
 {
 	[super dealloc];
 	[[CCTextureCache sharedTextureCache] removeUnusedTextures];
+	[[CCTextureCache sharedTextureCache] dumpCachedTextureInfo];
 }
 
 -(void) restartCallback: (id) sender
@@ -173,6 +176,7 @@ Class restartAction()
 	CCSprite *img = [CCSprite spriteWithFile:@"test_image.png"];
 	img.position = ccp( s.width/2.0f, s.height/2.0f);
 	[self addChild:img];
+	[[CCTextureCache sharedTextureCache] dumpCachedTextureInfo];
 	
 }
 
@@ -194,6 +198,7 @@ Class restartAction()
 	CCSprite *img = [CCSprite spriteWithFile:@"test_image.jpeg"];
 	img.position = ccp( s.width/2.0f, s.height/2.0f);
 	[self addChild:img];
+	[[CCTextureCache sharedTextureCache] dumpCachedTextureInfo];
 	
 }
 
@@ -215,6 +220,7 @@ Class restartAction()
 	CCSprite *img = [CCSprite spriteWithFile:@"test_image.bmp"];
 	img.position = ccp( s.width/2.0f, s.height/2.0f);
 	[self addChild:img];
+	[[CCTextureCache sharedTextureCache] dumpCachedTextureInfo];
 	
 }
 
@@ -236,6 +242,7 @@ Class restartAction()
 	CCSprite *img = [CCSprite spriteWithFile:@"test_image.tiff"];
 	img.position = ccp( s.width/2.0f, s.height/2.0f);
 	[self addChild:img];
+	[[CCTextureCache sharedTextureCache] dumpCachedTextureInfo];
 	
 }
 
@@ -257,6 +264,7 @@ Class restartAction()
 	CCSprite *img = [CCSprite spriteWithFile:@"test_image.gif"];
 	img.position = ccp( s.width/2.0f, s.height/2.0f);
 	[self addChild:img];
+	[[CCTextureCache sharedTextureCache] dumpCachedTextureInfo];
 	
 }
 
@@ -299,6 +307,7 @@ Class restartAction()
 	NSAssert( img.texture.name == sprite.texture.name, @"Error: CCTextureCache is not reusing the texture");
 
 	[image release];
+	[[CCTextureCache sharedTextureCache] dumpCachedTextureInfo];
 }
 
 -(NSString *) title
@@ -342,6 +351,7 @@ Class restartAction()
 	
 	[img0 runAction: [CCRepeatForever actionWithAction: [CCSequence actions: scale1, sc_back, nil]]];
 	[img1 runAction: [CCRepeatForever actionWithAction: [CCSequence actions: scale2, sc_back2, nil]]];	
+	[[CCTextureCache sharedTextureCache] dumpCachedTextureInfo];
 }
 
 -(NSString *) title
@@ -390,6 +400,7 @@ Class restartAction()
 		[imgMipMap runAction: [CCRepeatForever actionWithAction: [CCSequence actions: scale1, sc_back, nil]]];
 		[img runAction: [CCRepeatForever actionWithAction: [CCSequence actions: scale2, sc_back2, nil]]];
 	}
+	[[CCTextureCache sharedTextureCache] dumpCachedTextureInfo];
 }
 
 -(NSString *) title
@@ -431,6 +442,7 @@ Class restartAction()
 	
 	[imgMipMap runAction: [CCRepeatForever actionWithAction: [CCSequence actions: scale1, sc_back, nil]]];
 	[img runAction: [CCRepeatForever actionWithAction: [CCSequence actions: scale2, sc_back2, nil]]];
+	[[CCTextureCache sharedTextureCache] dumpCachedTextureInfo];
 }
 
 -(NSString *) title
@@ -461,6 +473,7 @@ Class restartAction()
 		img.position = ccp( s.width/2.0f, s.height/2.0f);
 		[self addChild:img];
 	}
+	[[CCTextureCache sharedTextureCache] dumpCachedTextureInfo];
 }
 
 -(NSString *) title
@@ -491,6 +504,7 @@ Class restartAction()
 	
 	NSLog(@"This test is not supported by Mac");
 #endif
+	[[CCTextureCache sharedTextureCache] dumpCachedTextureInfo];
 	
 }
 
@@ -519,6 +533,7 @@ Class restartAction()
 	} else {
 		NSLog(@"This test is not supported in cocos2d-mac");
 	}
+	[[CCTextureCache sharedTextureCache] dumpCachedTextureInfo];
 	
 }
 
@@ -548,6 +563,7 @@ Class restartAction()
 	} else {
 		NSLog(@"This test is not supported in cocos2d-mac");
 	}
+	[[CCTextureCache sharedTextureCache] dumpCachedTextureInfo];
 
 }
 
@@ -573,7 +589,8 @@ Class restartAction()
 	CCSprite *img = [CCSprite spriteWithFile:@"test_image_rgba8888.pvr"];
 	img.position = ccp( s.width/2.0f, s.height/2.0f);
 	[self addChild:img];
-	
+	[[CCTextureCache sharedTextureCache] dumpCachedTextureInfo];
+
 }
 
 -(NSString *) title
@@ -601,6 +618,7 @@ Class restartAction()
 	} else {
 		NSLog(@"BGRA8888 images are not supported");
 	}
+	[[CCTextureCache sharedTextureCache] dumpCachedTextureInfo];
 }
 
 -(NSString *) title
@@ -625,6 +643,7 @@ Class restartAction()
 	CCSprite *img = [CCSprite spriteWithFile:@"test_image_rgba5551.pvr"];
 	img.position = ccp( s.width/2.0f, s.height/2.0f);
 	[self addChild:img];
+	[[CCTextureCache sharedTextureCache] dumpCachedTextureInfo];
 	
 }
 
@@ -649,7 +668,8 @@ Class restartAction()
 	CCSprite *img = [CCSprite spriteWithFile:@"test_image_rgba4444.pvr"];
 	img.position = ccp( s.width/2.0f, s.height/2.0f);
 	[self addChild:img];
-	
+	[[CCTextureCache sharedTextureCache] dumpCachedTextureInfo];
+
 }
 
 -(NSString *) title
@@ -673,7 +693,8 @@ Class restartAction()
 	CCSprite *img = [CCSprite spriteWithFile:@"test_image_rgba4444.pvr.gz"];
 	img.position = ccp( s.width/2.0f, s.height/2.0f);
 	[self addChild:img];
-	
+	[[CCTextureCache sharedTextureCache] dumpCachedTextureInfo];
+
 }
 
 -(NSString *) title
@@ -703,6 +724,7 @@ Class restartAction()
 	CCSprite *img = [CCSprite spriteWithFile:@"test_image_rgba4444.pvr.ccz"];
 	img.position = ccp( s.width/2.0f, s.height/2.0f);
 	[self addChild:img];	
+	[[CCTextureCache sharedTextureCache] dumpCachedTextureInfo];
 }
 
 -(NSString *) title
@@ -733,6 +755,7 @@ Class restartAction()
 	CCSprite *img = [CCSprite spriteWithFile:@"test_image_rgb565.pvr"];
 	img.position = ccp( s.width/2.0f, s.height/2.0f);
 	[self addChild:img];
+	[[CCTextureCache sharedTextureCache] dumpCachedTextureInfo];
 	
 }
 
@@ -757,7 +780,8 @@ Class restartAction()
 	CCSprite *img = [CCSprite spriteWithFile:@"test_image_a8.pvr"];
 	img.position = ccp( s.width/2.0f, s.height/2.0f);
 	[self addChild:img];
-	
+	[[CCTextureCache sharedTextureCache] dumpCachedTextureInfo];
+
 }
 
 -(NSString *) title
@@ -781,7 +805,8 @@ Class restartAction()
 	CCSprite *img = [CCSprite spriteWithFile:@"test_image_i8.pvr"];
 	img.position = ccp( s.width/2.0f, s.height/2.0f);
 	[self addChild:img];
-	
+	[[CCTextureCache sharedTextureCache] dumpCachedTextureInfo];
+
 }
 
 -(NSString *) title
@@ -805,7 +830,8 @@ Class restartAction()
 	CCSprite *img = [CCSprite spriteWithFile:@"test_image_ai88.pvr"];
 	img.position = ccp( s.width/2.0f, s.height/2.0f);
 	[self addChild:img];
-	
+	[[CCTextureCache sharedTextureCache] dumpCachedTextureInfo];
+
 }
 
 -(NSString *) title
@@ -857,7 +883,8 @@ Class restartAction()
 	CCSprite *img = [CCSprite spriteWithFile:@"grossini_128x256_mipmap.pvr"];
 	img.position = ccp( s.width/2.0f, s.height/2.0f);
 	[self addChild:img];
-	
+	[[CCTextureCache sharedTextureCache] dumpCachedTextureInfo];
+
 }
 
 -(NSString *) title
@@ -886,6 +913,7 @@ Class restartAction()
 		img.position = ccp( s.width/2.0f, s.height/2.0f);
 		[self addChild:img];
 	}
+	[[CCTextureCache sharedTextureCache] dumpCachedTextureInfo];
 }
 
 -(NSString *) title
@@ -940,6 +968,7 @@ Class restartAction()
 	
 	[sprite2 runAction:scaleforever];
 	[sprite runAction: [[scaleforever copy] autorelease]];
+	[[CCTextureCache sharedTextureCache] dumpCachedTextureInfo];
 }
 
 -(NSString *) title
@@ -1035,6 +1064,7 @@ Class restartAction()
 
 	// restore default
 	[CCTexture2D setDefaultAlphaPixelFormat:kCCTexture2DPixelFormat_Default];
+	[[CCTextureCache sharedTextureCache] dumpCachedTextureInfo];
 }
 
 -(NSString *) title
